--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -20,6 +19,8 @@
     "react-final-form": "^6.5.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux-form-validators": "^3.3.2",
+    "sass": "^1.35.1",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
