--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-select": "^4.0.17",
     "@types/react-tabs": "^2.3.2",
     "@types/styled-components": "^5.1.10",
     "axios": "^0.21.1",
@@ -22,6 +23,7 @@
     "react-final-form": "^6.5.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
     "react-tabs": "^3.2.2",
     "redux-form-validators": "^3.3.2",
     "sass": "^1.35.1",
